alignment in sidebar and screen issue

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -18,7 +18,6 @@
 .docs-nav .nav-item.section-title {
   margin-left: 0;
   border: none;
-
 }
 
 .docs-nav .section-title {
@@ -42,7 +41,11 @@
   text-decoration: none;
   background: none;
   border: 0;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out;
+  .nav-link-span {
+    position: relative;
+  }
 
   &-span {
     &:hover {
@@ -66,7 +69,7 @@
 
 .nav {
   --bs-nav-link-padding-x: 1rem;
-  --bs-nav-link-padding-y: .5rem;
+  --bs-nav-link-padding-y: 0.5rem;
   --bs-nav-link-font-weight: ;
   --bs-nav-link-color: var(--bs-link-color);
   --bs-nav-link-hover-color: var(--bs-link-hover-color);
@@ -155,7 +158,6 @@
 }
 
 .docs-sidebar {
-
   left: -260px;
 
   transition: all 0.5s ease 0s;
@@ -173,12 +175,9 @@
   display: block;
   float: right;
   margin: 8px 10px 0px 0px;
-
 }
 
-@media(max-width:980px) {
-
-
+@media (max-width: 980px) {
   .menuIcon {
     margin: 9px 0px 0px 9px;
     font-size: 24px;
@@ -187,9 +186,7 @@
   }
 }
 
-
 // sidebar css latest
-
 
 #docs-sidebar nav li a svg {
   width: 10px;
@@ -208,7 +205,7 @@
 #docs-sidebar a {
   padding-left: 0;
   padding-right: 0;
-  font-family: 'poppins-regular';
+  font-family: "poppins-regular";
 }
 
 #docs-sidebar a:hover {
