--- a/src/styles/dashboard.module.scss
+++ b/src/styles/dashboard.module.scss
@@ -2,98 +2,99 @@
 @import "../styles/variables.module.scss";
 
 .wrapper {
-    // border:2px solid red;
-    min-height:100vh;
-    position:relative;
-    // top:60px;
+  // border:2px solid red;
+  min-height: 100vh;
+  position: relative;
+  // top:60px;
 
-    .main__wrapper{
-        margin:auto;
-        // border:1px solid black;
-        // height:300px;
-        min-height:100vh;
-        font-family: "poppins-regular";
-
-        @media screen and (min-width:980px) {
-            position:absolute;
-            width: calc(100% - 300px);
-            left:300px;
-        }
-
-
-    }
-}
-.contentSection{
-    max-width:1300px;
-    padding: 1rem;
+  .main {
     margin: auto;
-    // margin-top: 40px;
+    // border:1px solid black;
+    // height:300px;
     min-height: 100vh;
-    position: relative;
-    // top: 60px;
+    font-family: "poppins-regular";
 
-    .main__wrapper {
-        // margin: auto;
-        // border:1px solid black;
-        // height:300px;
-        min-height: 100vh;
-        font-family: "poppins-regular";
-
-        @media screen and (min-width:980px) {
-            position: absolute;
-            width: calc(100% - 300px);
-            left: 300px;
-        }
-
-
+    @media screen and (min-width: 980px) {
+      position: absolute;
+      width: calc(100% - 40px);
+      left: 40px;
     }
+  }
+  .main.show {
+    @media screen and (min-width: 980px) {
+      position: absolute;
+      width: calc(100% - 300px);
+      left: 300px;
+    }
+  }
+}
+.contentSection {
+  max-width: 1300px;
+  padding: 1rem;
+  margin: auto;
+  // margin-top: 40px;
+  min-height: 100vh;
+  position: relative;
+  // top: 60px;
+
+  .main__wrapper {
+    // margin: auto;
+    // border:1px solid black;
+    // height:300px;
+    min-height: 100vh;
+    font-family: "poppins-regular";
+
+    @media screen and (min-width: 980px) {
+      position: absolute;
+      width: calc(100% - 300px);
+      left: 300px;
+    }
+  }
 }
 
 .contentSection {
-    max-width: 1300px;
-    padding: 1rem;
-    margin: auto;
+  max-width: 1300px;
+  padding: 1rem;
+  margin: auto;
 
-    .intoSec {
-        // border:2px solid green;
-        margin-bottom: 32px;
+  .intoSec {
+    // border:2px solid green;
+    margin-bottom: 32px;
 
-        h1 {
-            font-size: 2.7rem;
-        }
-
-        .smapleText {
-            margin-top: 32px;
-        }
-
-        h4 {
-            margin-top: 10px;
-            letter-spacing: .5px;
-        }
-
-        .githubCode {
-            height: 300px;
-            margin: 32px 0px;
-            padding: 10px;
-            border: 1px solid $grey_color;
-            border-radius: 10px;
-        }
-
-        .text {
-            margin: 10px 0px;
-        }
+    h1 {
+      font-size: 2.7rem;
     }
+
+    .smapleText {
+      margin-top: 32px;
+    }
+
+    h4 {
+      margin-top: 10px;
+      letter-spacing: 0.5px;
+    }
+
+    .githubCode {
+      height: 300px;
+      margin: 32px 0px;
+      padding: 10px;
+      border: 1px solid $grey_color;
+      border-radius: 10px;
+    }
+
+    .text {
+      margin: 10px 0px;
+    }
+  }
 }
 
 .mainHeader {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
 
-    h3 {
-        color: red;
-    }
-
-
+  h3 {
+    color: red;
+  }
 }
